Fix disalignment with display number

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
 
 .calculator .display {
   font-size: 6em;
-  margin-right: 0.65em;
+  margin-right: 0.5em;
   align-self: flex-end;
 }
 
